[package]
name = "raspi-sensor"
version = "0.1.0"
edition = "2024"

[lib]
name = "raspi_sensor"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "led-sensor-test"
path = "src/cmd/led_sensor_test.rs"

[[bin]]
name = "button-sensor-test"
path = "src/cmd/button_sensor_test.rs"

[[bin]]
name = "dht11-sensor-test"
path = "src/cmd/dht11_sensor_test.rs"

[[bin]]
name = "weight-sensor-test"
path = "src/cmd/weight_sensor_test.rs"

[[bin]]
name = "dc-relay-sensor-test"
path = "src/cmd/dc_relay_sensor_test.rs"

[[bin]]
name = "dc-relay-pwm-sensor-test"
path = "src/cmd/dc_relay_pwm_sensor_test.rs"

[[bin]]
name = "aht30-sensor-test"
path = "src/cmd/aht30_sensor_test.rs"

[[bin]]
name = "bme280-sensor-test"
path = "src/cmd/bme280_sensor_test.rs"

[[bin]]
name = "uln2003a_sensor_test"
path = "src/cmd/uln2003a_sensor_test.rs"

[dependencies.sensor-hal]
path = "/mnt/e/Project_Code/Rust/sensor-hal"
features = ["std"]

[dependencies.rppal]
path = "/home/ubuntu/project/rust/raspi-hal"
features = ["hal"]

[dependencies]
anyhow = "1.0.100"
embedded-hal = "1.0.0"
embedded-timers = { version = "0.4.0", features = ["std"] }
